--- a/tox.ini
+++ b/tox.ini
@@ -23,3 +23,8 @@ commands =
 commands =
     {envpython} --version
     py.test -v --basetemp="{envtmpdir}" -k-skip_ci tests --ignore tests/test_examples.py
+
+[testenv:testexamples]
+commands =
+    {envpython} scripts/install_devplatforms.py
+    py.test -v --basetemp="{envtmpdir}" tests/test_examples.py
