--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,3 +1,3 @@
 [settings]
 line_length=88
-known_third_party=OpenSSL, SCons, autobahn, jsonrpc, twisted, zope
+known_third_party=OpenSSL, SCons, jsonrpc, twisted, zope
