--- a/tox.ini
+++ b/tox.ini
@@ -21,15 +21,6 @@ commands =
 [testenv:lint]
 commands =
     {envpython} --version
-    pylint --rcfile=./.pylintrc ./platformio ./tests
+    pylint --rcfile=./.pylintrc ./platformio
 
-[testenv:testcore]
-commands =
-    {envpython} --version
-    py.test -v --basetemp="{envtmpdir}" -k-skip_ci tests --ignore tests/test_examples.py
-
-[testenv:testexamples]
-commands =
-    {envpython} scripts/install_devplatforms.py
-    py.test -v --basetemp="{envtmpdir}" tests/test_examples.py
 
