--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,6 @@ commands =
 [testenv:lint]
 commands =
     {envpython} --version
-    pylint --rcfile=./.pylintrc ./platformio
+    pylint --rcfile=./.pylintrc ./core
 
 
