--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,48 +6,47 @@ on:
       - master
     paths-ignore:
       - '**.md'
-      - 'CD.yml'
-      - 'check.yml'
-      - 'nightly.yml'
+      # - '**.yml'
+
 env:
   UPLOAD_BUILD: true
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: "recursive"
-          fetch-depth: 1
+  check:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python: [3.9]
+        platform:
+          - "51"
+        template:
+          - "A"
 
-      - name: Python
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Python ${{ matrix.python }}
         uses: actions/setup-python@v1
         with:
-          python-version: 3.9
+          python-version: ${{ matrix.python }}
 
-      - name: TEST P51
+      - name: Install
         run: |
           python -m pip install --upgrade pip
           pip install -U https://github.com/OS-Q/S03/archive/master.zip
-          pio platform install https://github.com/OS-Q/P51/releases/latest/download/P51.zip
+          pio platform install https://github.com/OS-Q/P${{ matrix.platform }}/releases/latest/download/P${{ matrix.platform }}.zip
 
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: OS-Q/T51A
+          repository: OS-Q/T${{ matrix.platform }}${{ matrix.template }}
           token: ${{ secrets.OSQ_REPO_TOKEN }}
-          path: T51A
+          path: T${{ matrix.platform }}${{ matrix.template }}
 
       - name: Build
-        working-directory: T51A
+        working-directory: T${{ matrix.platform }}${{ matrix.template }}
         if: success()
+        id: build
         run: |
           pio run -d .
-
-      - name: Checkout PIO
-        uses: actions/checkout@v2
-        with:
-          repository: platformio/platformio-core
-          token: ${{ secrets.OSQ_REPO_TOKEN }}
-          path: PIO
+          echo "::set-output name=status::success"
