--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -67,7 +67,7 @@ jobs:
           echo ${GITHUB_REF/refs\/tags\//} >> README.txt
           echo -e " by www.OS-Q.com\n" >> README.txt
           git log --stat -1 >> README.txt
-          zip -r S03.zip boards builder extend link.json link.py
+          zip -r S03.zip boards extend link.json link.py
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "::set-output name=status::success"
 
