--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -3,42 +3,73 @@ name: CD
 on:
   push:
     tags:
-      - 'v*'
+      - "v[0-9]+.[0-9]+.[0-9]+*"
 
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.repository == 'OS-Q/S03'
     strategy:
       fail-fast: true
       matrix:
-        python-version: [3.9]
-        examples:
-          - "examples/arduino"
-          - "examples/native"
-          - "examples/simba"
+        platforms:
+          - "51"
+          # - "52"
+          # - "68"
+        templates:
+          - "A"
 
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: "recursive"
-        fetch-depth: 1
+      - uses: actions/checkout@v2
+        with:
+          submodules: "recursive"
+          fetch-depth: 1
 
-    - name: Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Python 3.9
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
 
-    - name: Install
-      run: |
-        python -m pip install --upgrade pip
-        pip install -U https://github.com/OS-Q/S03/archive/master.zip
-        qio platform install file://.
+      - name: Checkout platforms
+        uses: actions/checkout@v2
+        with:
+          repository: OS-Q/P${{ matrix.platforms }}
+          token: ${{ secrets.OSQ_REPO_TOKEN }}
+          path: P${{ matrix.platforms }}
 
-    - name: Build
-      run: |
-        qio run -d ${{ matrix.examples }}
+      - name: Checkout templates
+        uses: actions/checkout@v2
+        with:
+          repository: OS-Q/T${{ matrix.platforms }}${{ matrix.templates }}
+          token: ${{ secrets.OSQ_REPO_TOKEN }}
+          path: T${{ matrix.platforms }}${{ matrix.templates }}
+
+      - name: Install
+        if: github.repository == 'OS-Q/S03'
+        working-directory: P${{ matrix.platforms }}
+        run: |
+          python -m pip install --upgrade pip
+          pip install -U file://.
+          qio platform install file://.
+
+      - name: Build
+        working-directory: T${{ matrix.platforms }}${{ matrix.templates }}
+        if: success()
+        id: build
+        run: |
+          pio run -d .
+          echo "::set-output name=status::success"
+
+      - name: notification
+        uses: stopstopstop/mqtt-action@master
+        with:
+          protocol: mqtt
+          host: ${{secrets.MQTT_SERVER}}
+          port: 1883
+          username: ${{secrets.MQTT_USERNAME}}
+          password: ${{secrets.MQTT_PASSWORD}}
+          topic: ${{github.repository}}/${{github.workflow}}/${{ matrix.platforms }}/${{ matrix.templates }}
+          message: ${{steps.build.outputs.status}}
 
   release:
     needs:
@@ -56,18 +87,18 @@ jobs:
         id: tag
         if: startsWith(github.ref, 'refs/tags/')
         run: |
-          echo "::set-output name=release_tag::Release_$(date +"%Y.%m.%d")_${GITHUB_REF/refs\/tags\//}"
+          echo "::set-output name=release_tag::release_package_$(date +"%Y.%m.%d")_${GITHUB_REF/refs\/tags\//}"
           echo "::set-output name=status::success"
 
       - name: Package Src
         id: package
         run: |
-          echo "Platform S03 for ESP8266/ESP8285 SoC" >> README.txt
+          echo "Platform S03 for GSM SoC" >> README.txt
           echo $(date +"%Y.%m.%d") >> README.txt
           echo ${GITHUB_REF/refs\/tags\//} >> README.txt
-          echo -e " by www.OS-Q.com\n" >> README.txt
+          echo -e "www.OS-Q.com\n" >> README.txt
           git log --stat -1 >> README.txt
-          zip -r S03.zip boards extend link.json link.py
+          zip -r S03.zip platformio scripts setup.py
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "::set-output name=status::success"
 
@@ -90,39 +121,6 @@ jobs:
             ${{ env.FIRMWARE }}/S03.zip
             ${{ env.FIRMWARE }}/README.txt
 
-  rebuild:
-    needs:
-      - release
-    if: success() && startsWith(github.ref, 'refs/tags/')
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: "recursive"
-          fetch-depth: 1
-
-      - name: Python ${{ matrix.python }}
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.9
-
-      - name: Install
-        id: getgh
-        run: |
-          python -m pip install --upgrade pip
-          pip install -U https://github.com/OS-Q/S03/archive/master.zip
-          wget https://github.com/OS-Q/S03/releases/latest/download/S03.zip -O S03.zip
-          wget https://github.com/OS-Q/S03/releases/latest/download/README.txt -O README.txt
-          qio platform install file://./S03.zip
-          echo "::set-output name=status::success"
-
-      - name: Build
-        if: steps.getgh.outputs.status == 'success' && !cancelled()
-        run: |
-          qio run -d examples/arduino
-          qio run -d examples/native
-          qio run -d examples/simba
-
       - name: Setup OSS
         uses: stopstopstop/ossutil-action@master
         with:
@@ -133,21 +131,22 @@ jobs:
       - name: Upload To OSS
         id: OSS
         run: |
-          ossutil cp S03.zip ${{ secrets.OSS_BUCKET }} -rf
+          ossutil cp ${{ env.FIRMWARE }}/S03.zip ${{ secrets.OSS_BUCKET }} -rf
           echo "::set-output name=status::success"
 
       - name: Send Mail
-        if: steps.OSS.outputs.status == 'success' && !cancelled()
+        if: steps.rebuild.outputs.status == 'success' && !cancelled()
         uses: stopstopstop/mail-action@master
         with:
           server_address:  smtp.gmail.com
           server_port: 465
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrets.MAIL_PASSWORD}}
-          subject: OS-Q S03 Released
+          subject: OS-Q S03 released
           to: ${{secrets.MAIL_TO}}
           from: Qitas
           cc: ${{github.event.pusher.email}}
           content_type: text/html
           convert_markdown: true
-          body: file://README.txt
+          attachments: S03.zip
+          body: file://README.md
