--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -2,7 +2,7 @@ name: nightly
 
 on:
   schedule:
-    - cron: '0 3 * * *'
+    - cron: '0 9 * * *'
 
 env:
   UPLOAD_BUILD: true
@@ -14,16 +14,15 @@ jobs:
       matrix:
         platform:
           - "51"
-          # - "52"
+          - "52"
           # - "68"
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python: [3.7,3.8,3.9]
+        python: [3.7,3.9]
         package:
           - "release"
           - "latest"
 
     runs-on: ${{ matrix.os }}
-
     steps:
       - uses: actions/checkout@v2
         with:
@@ -39,14 +38,14 @@ jobs:
         if: matrix.package == 'release'
         run: |
           python -m pip install --upgrade pip
-          pip install -U file://.
+          pip install -U https://github.com/OS-Q/S03/releases/latest/download/S03.zip
           pio platform install https://github.com/OS-Q/P${{ matrix.platform }}/releases/latest/download/P${{ matrix.platform }}.zip
 
       - name: Install latest
         if: matrix.package == 'latest' && github.repository == 'OS-Q/S03'
         run: |
           python -m pip install --upgrade pip
-          pip install -U file://.
+          pip install -U https://github.com/OS-Q/S03/archive/master.zip
           pio platform install https://github.com/OS-Q/P${{ matrix.platform }}/archive/master.zip
 
       - name: Checkout
