--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,14 +24,13 @@ jobs:
         template:
           - "A"
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python: [3.7,3.9]
 
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Python ${{ matrix.python }}
+      - name: Python
         uses: actions/setup-python@v1
         with:
-          python-version: ${{ matrix.python }}
+          python-version: 3.9
 
       - name: Install
         run: |
