--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,6 +25,7 @@ jobs:
   #     uses: ricardochaves/python-lint@master
   #     with:
   #       python-root-list: "platformio"
+
   # build:
   #   strategy:
   #     fail-fast: false
@@ -81,7 +82,7 @@ jobs:
 
   templete:
     name: templete
-    if: github.repository == 'OS-Q/S03'
+    if: github.repository == 'OS-Q/M03'
     strategy:
       fail-fast: false
       matrix:
@@ -104,7 +105,7 @@ jobs:
       - name: Install
         run: |
           python -m pip install --upgrade pip
-          pip install -U https://github.com/OS-Q/S03/archive/master.zip
+          pip install -U https://github.com/OS-Q/M03/archive/master.zip
           pio platform install https://github.com/OS-Q/P${{ matrix.platform }}/releases/latest/download/P${{ matrix.platform }}.zip
 
       - name: Checkout
