--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -42,14 +42,14 @@ jobs:
         if: matrix.package == 'release'
         run: |
           python -m pip install --upgrade pip
-          pip install -U https://github.com/OS-Q/S03/releases/latest/download/S03.zip
+          pip install -U https://github.com/OS-Q/M03/releases/latest/download/M03.zip
           pio platform install https://github.com/OS-Q/P${{ matrix.platform }}/releases/latest/download/P${{ matrix.platform }}.zip
 
       - name: Install latest
-        if: matrix.package == 'latest' && github.repository == 'OS-Q/S03'
+        if: matrix.package == 'latest' && github.repository == 'OS-Q/M03'
         run: |
           python -m pip install --upgrade pip
-          pip install -U https://github.com/OS-Q/S03/archive/master.zip
+          pip install -U https://github.com/OS-Q/M03/archive/master.zip
           pio platform install https://github.com/OS-Q/P${{ matrix.platform }}/archive/master.zip
 
       - name: Checkout
