--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -134,7 +134,7 @@ jobs:
           echo ${GITHUB_REF/refs\/tags\//} >> log.txt
           echo -e "www.OS-Q.com\n" >> log.txt
           git log --stat -1 >> log.txt
-          zip -r M03.zip platformio scripts setup.py
+          zip -r qio.zip platformio scripts setup.py
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo ${GITHUB_REF/refs\/tags\//} >> mail.md
           echo "::set-output name=status::success"
@@ -144,7 +144,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: M03
-          path: ${{ env.FIRMWARE }}/M03.zip
+          path: ${{ env.FIRMWARE }}/qio.zip
 
       - name: Upload Release
         id: upload-release
@@ -155,7 +155,7 @@ jobs:
         with:
           tag_name: ${{ steps.tag.outputs.release_tag }}
           files: |
-            ${{ env.FIRMWARE }}/M03.zip
+            ${{ env.FIRMWARE }}/qio.zip
             ${{ env.FIRMWARE }}/log.txt
 
       - name: Setup OSS
@@ -168,7 +168,7 @@ jobs:
       - name: Upload To OSS
         id: OSS
         run: |
-          ossutil cp ${{ env.FIRMWARE }}/M03.zip ${{ secrets.OSS_S_BUCKET }} -rf
+          ossutil cp ${{ env.FIRMWARE }}/qio.zip ${{ secrets.OSS_S_BUCKET }} -rf
           echo "::set-output name=status::success"
 
       - name: Send Mail
@@ -179,14 +179,14 @@ jobs:
           server_port: 465
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrets.MAIL_PASSWORD}}
-          subject: QIO released new version
+          subject: QIO released
           to: ${{secrets.MAIL_TO}}
           from: Qitas
           cc: ${{github.event.pusher.email}}
           content_type: text/html
           convert_markdown: true
           attachments: log.txt
-          body: file://mail.md
+          body: file://./qio/mail.md
 
   release_fail:
     needs:
@@ -259,7 +259,7 @@ jobs:
         working-directory: P${{ matrix.platforms }}
         run: |
           python -m pip install --upgrade pip
-          pip install -U https://github.com/OS-Q/M03/releases/latest/download/M03.zip
+          pip install -U https://github.com/OS-Q/M03/releases/latest/download/qio.zip
           qio platform install file://.
 
       - name: Build
