--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ commands =
 [testenv:lint]
 commands =
     {envpython} --version
-    pylint --rcfile=../.pylintrc ../platformio ./tests
+    pylint --rcfile=./.pylintrc ./platformio ./qio
 
 [testenv:testcore]
 commands =
