--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,71 +5,67 @@ on:
     branches:
       - master
 
-env:
-  UPLOAD_BUILD: false
-
 jobs:
-  build:
-    name: tox
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-16.04, windows-latest, macos-latest]
+  # build:
+  #   name: tox
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       os: [ubuntu-16.04, windows-latest, macos-latest]
 
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: "recursive"
-          fetch-depth: 1
+  #   runs-on: ${{ matrix.os }}
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #       with:
+  #         submodules: "recursive"
+  #         fetch-depth: 1
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.7
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v2
+  #       with:
+  #         python-version: 3.7
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install tox
+  #     - name: Install dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install tox
 
-      - name: Run on Linux
-        working-directory: qio
-        if: startsWith(matrix.os, 'ubuntu')
-        env:
-          PIO_INSTALL_DEVPLATFORMS_OWNERNAMES: "platformio"
-          PIO_INSTALL_DEVPLATFORMS_IGNORE: "ststm8,intel_mcs51"
-        run: |
-          sudo apt-get install libc6-i386
-          sudo apt clean
-          docker rmi $(docker image ls -aq)
-          df -h
-          tox -e lint
+  #     - name: Run on Linux
+  #       working-directory: qio
+  #       if: startsWith(matrix.os, 'ubuntu')
+  #       env:
+  #         PIO_INSTALL_DEVPLATFORMS_OWNERNAMES: "platformio"
+  #         PIO_INSTALL_DEVPLATFORMS_IGNORE: "ststm8,intel_mcs51"
+  #       run: |
+  #         sudo apt-get install libc6-i386
+  #         sudo apt clean
+  #         docker rmi $(docker image ls -aq)
+  #         df -h
+  #         tox -e lint
 
-      - name: Run on macOS
-        working-directory: qio
-        if: startsWith(matrix.os, 'macos')
-        env:
-          PIO_INSTALL_DEVPLATFORMS_OWNERNAMES: "platformio"
-          PIO_INSTALL_DEVPLATFORMS_IGNORE: "ststm8,lattice_ice40,gd32v"
-        run: |
-          df -h
-          tox -e testcore
+  #     - name: Run on macOS
+  #       working-directory: qio
+  #       if: startsWith(matrix.os, 'macos')
+  #       env:
+  #         PIO_INSTALL_DEVPLATFORMS_OWNERNAMES: "platformio"
+  #         PIO_INSTALL_DEVPLATFORMS_IGNORE: "ststm8,lattice_ice40,gd32v"
+  #       run: |
+  #         df -h
+  #         tox -e testcore
 
-      - name: Run on Windows
-        working-directory: qio
-        if: startsWith(matrix.os, 'windows')
-        env:
-          PLATFORMIO_CORE_DIR: C:/pio
-          PLATFORMIO_WORKSPACE_DIR: C:/pio-workspace/$PROJECT_HASH
-          PIO_INSTALL_DEVPLATFORMS_OWNERNAMES: "platformio"
-          PIO_INSTALL_DEVPLATFORMS_IGNORE: "ststm8,intel_mcs51"
-        run: |
-          tox -e testexamples
+  #     - name: Run on Windows
+  #       working-directory: qio
+  #       if: startsWith(matrix.os, 'windows')
+  #       env:
+  #         PLATFORMIO_CORE_DIR: C:/pio
+  #         PLATFORMIO_WORKSPACE_DIR: C:/pio-workspace/$PROJECT_HASH
+  #         PIO_INSTALL_DEVPLATFORMS_OWNERNAMES: "platformio"
+  #         PIO_INSTALL_DEVPLATFORMS_IGNORE: "ststm8,intel_mcs51"
+  #       run: |
+  #         tox -e testexamples
 
-  templete:
-    name: templete
-    if: github.repository == 'OS-Q/M03'
+  platform:
+    name: platform
     strategy:
       fail-fast: false
       matrix:
