--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: docs
 
 on:
   schedule:
-    - cron: '30 6 * * *'
+    - cron: '30 7 * * *'
   push:
     branches:
       - main
@@ -89,7 +89,7 @@ jobs:
         with:
           repository: ${{ env.DOCS_REPO }}
           path: ${{ env.DOCS_DIR }}
-          ref: master
+          ref: gh-pages
 
       - name: Synchronize Docs
         run: |
